--- a/premier.css
+++ b/premier.css
@@ -220,6 +220,11 @@ html,body{
     border: 2px solid #000;
 }
 
+#alpha h6:nth-child(even){
+    color: rgb(70, 69, 69);
+}
+
+
 #page2{
     width: 100%;
     height: 100%;
