--- a/premier.css
+++ b/premier.css
@@ -52,13 +52,26 @@ html,body{
     position: relative;
 }
 
-#nav h6{
+#nav h1::after{
+    content:"©";
     position: absolute;
-    top: 5.3vw;
-    left: 9vw;
-    font-weight: 800;
-    font-size: 12px;
-    color: #000000b9
+    font-size: 1.2vw;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 500;
+    top: 20%;
+    left: 88%;
+}
+
+#nav h1::before{
+    content:"model mangement";
+    position: absolute;
+    font-size: 1vw;
+    letter-spacing: 0.1px;
+    font-family: gilroy;
+    font-weight: 300;
+    bottom: 5%;
+    right: 16%;
+    color: #666;
 }
 
 #nav h2:nth-last-child(1){
@@ -310,45 +323,34 @@ html,body{
 
 #page3 #circle-txt{
     height: 100%;
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 #page3 #circle-txt1{
-    height: 60%;
-    width: 50%;
-    margin: 5vw;
-    border-radius: 50%;
-    border: 5px solid #000;
-    background-color: yellow
+    height: 75%;
+    width: 100%;
+    padding: 5vw;
 }
 
-#page3 #circle-txt1 #inner{
-    height: 90%;
-    width: 90%;
-    transform: translate(-20%,-25%);
-    margin: 5vw;
+#circle-txt1 img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
     border-radius: 50%;
-    background-color: crimson;
-    border: 4px solid #000;
-}
-
-#page3 #circle-txt1 #inner i{
-    font-size: 20vh;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-   background-color: green
+    box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.5);
 }
 
 #page3 #circle-txt2{
-    height: 35%;
+    height: 20%;
     width: 100%;
-    padding: 8vw;
+    padding: 0 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #page3 #circle-txt2 h3{
@@ -358,11 +360,10 @@ html,body{
     font-family: poppins;
 }
 
-
 #circle-img{
     height: 100%;
-    width: 50%;
-    padding: 5vw 5vw 0 5vw;
+    width: 60%;
+    padding: 2vw 5vw 0 2vw;
 }
 
 #circle-img img{
@@ -404,3 +405,282 @@ html,body{
     font-weight: 400;
 }
 
+#page5{
+    height: 100%;
+    width: 100%;
+    position: relative;
+    padding: 5vw 4vw;
+}
+
+#page5>h1{
+    text-align: center;
+    font-family: monument;
+    text-transform: uppercase;
+    margin-bottom: 7vh;
+}
+
+.elem{
+    height: 17vh;
+    width: 100%;
+    border-top: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2vw;
+    position: relative;
+}
+
+.elem img{
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    left: 17%;
+    position: absolute;
+    object-fit: cover;
+    object-position: 10% 20%;
+    opacity: 0;
+    transition: all ease 0.7s;
+}
+
+.elem:nth-child(even) img{
+    left: 50%;
+}
+
+.elem:hover img{
+    opacity: 1;
+    left: 30%;
+}
+
+.elem:nth-last-child(1){
+    border-bottom: 2px solid black;
+}
+
+.elem h4{
+    font-size: 1.2vw;
+    font-weight: 600;
+    text-transform: uppercase;
+    width: 6%;
+}
+
+.elem .elem-part2{
+    width: 45%;
+}
+
+.elem-part2 h1{
+    font-size: 2.7vw;
+    font-weight: 500;
+}
+
+.elem-part2 h5{
+    font-size: 0.8vw;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+#page6{
+    width: 100%;
+    height: 100%;
+    padding: 3vw;
+    display: flex;
+}
+
+#page6-lft{
+    width: 50%;
+    height: 100%;
+    padding: 0 2vw;
+}
+
+#page6-lft img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+}
+
+#page6-ryt{
+    width: 50%;
+    height: 100%;
+}
+
+#page6-ryt-cnt{
+    width: 100%;
+    height: 50%;
+}
+
+#page6-ryt-cnt h1{
+    font-family: monument;
+    font-size: 3vw;
+    height: 5vw;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+#page6-ryt-cnt h3{
+    width: 55%;
+    height: 8vw;
+    font-size: 1.6vw;
+    font-weight: 600;
+    font-family: ogg;
+}
+
+#page6-ryt-cnt p{
+    font-family: poppins;
+    font-size: 0.9vw;
+    font-weight: 400;
+}
+
+#page6-ryt-img{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#page6-ryt-img #ryt-img1{
+    height: 100%;
+    width: 58%;
+    background-image: url(https://plus.unsplash.com/premium_photo-1729095332242-1d0d42a5d96e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjF8fHBvdHJhaXQlMjBtb2RlbCUyMGZhc2hpb258ZW58MHx8MHx8fDA%3D);
+    background-position:0% 15%;
+    background-size: cover;
+}
+
+#page6-ryt-img #ryt-img2{
+    height: 100%;
+    width: 40%;
+    background-image: url(https://plus.unsplash.com/premium_photo-1697183202112-19523c5e7250?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODF8fHBvdHJhaXQlMjBtb2RlbCUyMGZhc2hpb258ZW58MHx8MHx8fDA%3D);
+    background-position:center;
+    background-size: cover;
+}
+
+#marque{
+    width: 100%;
+    white-space: nowrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding: 0.8vw;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+#marque h1{
+    display: inline-block;
+    font-size: 3vw;
+    -webkit-text-stroke: 2px black;
+    color: transparent;
+    letter-spacing: 3px;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-family: monument;
+    margin-right: 16px;
+    animation: marque 5s linear infinite;
+}
+
+@keyframes marque {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(calc(-100% - 20px));
+    }
+    
+}
+
+
+#footer{
+    width: 100%;
+    height: 40%;
+    margin-top: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    position: relative !important;
+}
+
+#footer h1{
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    font-family:monument ;
+    letter-spacing: -1px;
+    font-size: 37px;
+    position: absolute;
+    top: 10%;
+    position: relative;
+}
+
+#footer h1::after{
+    content:"©";
+    position: absolute;
+    font-size: 1.2vw;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 500;
+    top:0;
+    left: 88%;
+}
+
+#footer h1::before{
+    content:"model mangement";
+    position: absolute;
+    font-size: 1vw;
+    letter-spacing: 0.1px;
+    font-family: gilroy;
+    font-weight: 300;
+    top: 15%;
+    right: 16%;
+    color: #666;
+}
+
+#footer h2{
+    padding-top: 2%;
+    width: 20%;
+    height: 100%;
+    border-right: 2px solid black;
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+#footer h2:nth-last-child(2){
+    width: 40%;
+    height: 40%;
+    align-self: normal;
+    justify-self: center;
+    border-bottom: 2px solid black;
+}
+
+#foot-down{
+    position: absolute;
+    height: 60%;
+    width: 40%;
+    bottom: 0;
+    right: 0;
+    border-right: 2px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+#foot-icons{
+    width: 40%;
+    display: flex;
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    justify-content: space-evenly;
+}
+
+#foot-icons{
+    font-size: 1.8vw;
+}
+
+
+#foot-down h4{
+    position: absolute;
+    top: 40%;
+    left: 8%;
+    font-size: 1.5vw;
+    margin-top: 1vw;
+}
