--- a/style.css
+++ b/style.css
@@ -892,14 +892,18 @@ body {
     }
 
     #page2 #part1 h1 {
-        font-size: 25px;
-        line-height: 1.3;
-        margin-top: 5vw;
+        font-size: 4.2vw;
+        line-height: 1;
+        margin-top: 4vw;
+    }
+
+    #part2-txt1 #txt1{
+        width: 50%;
     }
 
     #part2-txt1 #txt1 h3 {
-        font-size: 4.8vw;
-        line-height: 2.5vh;
+        font-size: 4.1vw;
+        line-height: 2.3vh;
     }
 
     #part2-txt1 #txt2 h5 {
@@ -919,8 +923,8 @@ body {
     }
 
     #page3 #circle-txt1 {
-        height: 60%;
-        width: 86%;
+        height: 50%;
+        width: 100%;
         padding: 2vw;
     }
 
@@ -1017,6 +1021,7 @@ body {
     }
 
     #page6 {
+        margin-top: 5vw;
         width: 100%;
         height: 100%;
         padding: 3vw;
@@ -1070,6 +1075,11 @@ body {
         margin-top: 2vw;
     }
 
+    #marque h1 {
+        display: inline-block;
+        font-size: 3vw;
+        -webkit-text-stroke: 0.8px black;
+    }
 
     #footer {
         height: 20%;
